loggerapp/datalogger/driver/vrmagic/vrmusbcam2.h


// ------------------------------------------------------------------------
/// @defgroup Types                                             Basic Types
// ------------------------------------------------------------------------
/// @{

typedef unsigned char VRmBYTE;

typedef unsigned int VRmDWORD;

typedef unsigned int VRmBOOL;

typedef const char* VRmSTRING;


/// "size" type (int)
typedef VRM_STRUCT _VRmSizeI {
	int m_width;
	int m_height;
} VRmSizeI;


/// "point" type (int)
typedef VRM_STRUCT _VRmPointI {
	int m_x;
	int m_y;
} VRmPointI;


/// "rect" type (int)
typedef VRM_STRUCT _VRmRectI {
	int m_left;
	int m_top;
	int m_width;
	int m_height;
} VRmRectI;


/// @}
// ------------------------------------------------------------------------
/// @defgroup General                   Error Handling / General Management
// ------------------------------------------------------------------------
/// @{

/// return value values of API function calls
typedef VRM_ENUM _VRmRetVal
{
	/// return value for failed function call
	VRM_FAILED=0,
	/// return value for successful function call
	VRM_SUCCESS=1
} VRmRetVal;
typedef struct VRmUsbCamDeviceInternal* VRmUsbCamDevice;


/// struct for image format
typedef VRM_STRUCT _VRmImageFormat
{
	/// width in pixels
	VRmDWORD m_width;
	/// height in lines
	VRmDWORD m_height;
	/// color format enum
	VRmColorFormat m_color_format;
	/// bit combination of enum VRmImageModifier values
	int m_image_modifier;
}VRmImageFormat;


/// struct for image container
typedef VRM_STRUCT _VRmImage
{
	/// image format struct
	VRmImageFormat m_image_format;
	/// pointer to image buffer
	VRmBYTE* mp_buffer;
	/// pitch = number of bytes from (x, y) to (x, y+1)
	VRmDWORD m_pitch;
	/// timestamp of image in ms since last VRmUsbCamRestartTimer()
	double m_time_stamp;
	/// private = additional internal data
	void* mp_private;
}VRmImage;

/// @}

/// @addtogroup SizeIProps Properties of type VRM_PROP_TYPE_SIZE_I
/// @{
typedef VRM_STRUCT _VRmPropAttribsSizeI {
	VRmSizeI m_default;
	VRmSizeI m_min;
	VRmSizeI m_max;
	VRmSizeI m_step;
} VRmPropAttribsSizeI;

/// @}

/// @addtogroup PointIProps Properties of type VRM_PROP_TYPE_POINT_I
/// @{
typedef VRM_STRUCT _VRmPropAttribsPointI {
	VRmPointI m_default;
	VRmPointI m_min;
	VRmPointI m_max;
	VRmPointI m_step;
} VRmPropAttribsPointI;

/// @}

/// @addtogroup RectIProps Properties of type VRM_PROP_TYPE_RECT_I
/// @{
typedef VRM_STRUCT _VRmPropAttribsRectI {
	VRmRectI m_default;
	VRmRectI m_min;
	VRmRectI m_max;
	VRmRectI m_step;
} VRmPropAttribsRectI;

/// @}

/// @addtogroup SizeIProps Properties of type VRM_PROP_TYPE_SIZE_I
/// @{
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetPropertyValueSizeI(VRmUsbCamDevice f_device, VRmPropId f_id, VRmSizeI* fp_value);

VRM_EXTERN VRmRetVal VRM_API VRmUsbCamSetPropertyValueSizeI(VRmUsbCamDevice f_device, VRmPropId f_id, const VRmSizeI* fcp_value);

VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetPropertyAttribsSizeI(VRmUsbCamDevice f_device, VRmPropId f_id, VRmPropAttribsSizeI* fp_attribs);

/// @}

/// @addtogroup PointIProps Properties of type VRM_PROP_TYPE_POINT_I
/// @{
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetPropertyValuePointI(VRmUsbCamDevice f_device, VRmPropId f_id, VRmPointI* fp_value);

VRM_EXTERN VRmRetVal VRM_API VRmUsbCamSetPropertyValuePointI(VRmUsbCamDevice f_device, VRmPropId f_id, const VRmPointI* fcp_value);

VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetPropertyAttribsPointI(VRmUsbCamDevice f_device, VRmPropId f_id, VRmPropAttribsPointI* fp_attribs);

/// @}

/// @addtogroup RectIProps Properties of type VRM_PROP_TYPE_RECT_I
/// @{
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetPropertyValueRectI(VRmUsbCamDevice f_device, VRmPropId f_id, VRmRectI* fp_value);

VRM_EXTERN VRmRetVal VRM_API VRmUsbCamSetPropertyValueRectI(VRmUsbCamDevice f_device, VRmPropId f_id, const VRmRectI* fcp_value);

VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetPropertyAttribsRectI(VRmUsbCamDevice f_device, VRmPropId f_id, VRmPropAttribsRectI* fp_attribs);

/// @}

/// @}
// ------------------------------------------------------------------------
/// @defgroup Misc                                    Misc Functions
// ------------------------------------------------------------------------
/// @{
/// Save a VRmImage to a PNG file. Compression level 0 is uncompressed, max. is 9, use default with -1.
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamSavePNG(VRmSTRING fcp_file_name, const VRmImage* fcp_image, int f_z_compression_level);

/// Load a VRmImage from a PNG file.
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamLoadPNG(VRmSTRING fcp_file_name, VRmImage** fpp_image);

/// @}

// ------------------------------------------------------------------------
/// @defgroup Callbacks                                    Callbacks/Events
// ------------------------------------------------------------------------
/// @{

/// VRmUsbCam (Static) Callback Types.
/// see VRmUsbCamRegisterStaticCallback().
typedef VRM_ENUM _VRmStaticCallbackType {
	/// A device change event was signaled by the system.
	/// params: a pointer to a VRmDeviceChangeType.
	/// note: this callback is only emitted from within
	/// VRmUsbCamUpdateDeviceKeyList()
	VRM_STATIC_CALLBACK_TYPE_DEVICE_CHANGE = 1,
	/// a CMem allocation or deallocation was performed. this is only
	/// relevant for Davinci based cameras.
	/// params: a pointer to a VRmStaticCallbackCMemAllocationChangeParams struct
	VRM_STATIC_CALLBACK_TYPE_CMEM_ALLOCATION_CHANGE = 2
} VRmStaticCallbackType;


/// Parameter definition for VRM_STATIC_CALLBACK_TYPE_DEVICE_CHANGE callback
typedef VRM_ENUM _VRmDeviceChangeType {
	/// indicates a device arrival
	VRM_DEVICE_CHANGE_TYPE_ARRIVAL = 1,
	/// indicates the completion of a device removal
	VRM_DEVICE_CHANGE_TYPE_REMOVECOMPLETE = 2,
	/// indicates that a device changed its busy state
	VRM_DEVICE_CHANGE_TYPE_BUSY = 3
} VRmDeviceChangeType;


/// parameter definition for VRM_STATIC_CALLBACK_TYPE_CMEM_ALLOCATION_CHANGE callback
typedef VRM_STRUCT _VRmStaticCallbackCMemAllocationChangeParams {
	/// type of event: true= allocation, false= deallocation
	VRmBOOL  m_allocate;
	/// virtual address of memory area
	void*    mp_virtual;
	/// physical address of memory area
	void*    mp_physical;
	/// size (in bytes) of memory area
	VRmDWORD m_size;
} VRmStaticCallbackCMemAllocationChangeParams;


/// Callback function signature definition for VRmUsbCamRegisterStaticCallback()
typedef void (VRM_API *VRmStaticCallback)(
	/// the type of callback
	VRmStaticCallbackType f_type,
	/// user data pointer as passed into VRmUsbCamRegisterStaticCallback()
	void* fp_user_data,
	/// optional additional callback parameters
	const void* fcp_callback_params);


/// register a static callback function.
/// NOTE: a specific callback function pointer can only be registered once per device.
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamRegisterStaticCallback(VRmStaticCallback fp_callback, void* fp_user_data);


/// unregister a static callback function
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamUnregisterStaticCallback(VRmStaticCallback fp_callback);


/// register a static callback function.
/// NOTE: in contrast to VRmUsbCamRegisterStaticCallback(), this functions allows
/// registering a specific callback function pointer multiple times as
/// long as fp_user_data is different each time.
/// you should use VRmUsbCamUnregisterStaticCallbackEx() for later unregistration
/// specifying the same function pointer and fp_user_data pair as used for
/// registration.
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamRegisterStaticCallbackEx(VRmStaticCallback fp_callback, void* fp_user_data);


/// unregister a static callback function.
/// specify the same function pointer and fp_user_data as used at registration.
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamUnregisterStaticCallbackEx(VRmStaticCallback fp_callback, void* fp_user_data);


/// Device Callback Types.
/// see VRmUsbCamRegisterDeviceCallbackEx().
/// these callbacks may be called synchronously from within any VRmUsbCamXXX() functions!
typedef VRM_ENUM _VRmDeviceCallbackType {
	// NOTE: type 0 is reserved
	/// The device LUT changed.
	/// params: a pointer to a VRmDWORD with the associated sensor port id
	VRM_DEVICE_CALLBACK_TYPE_LUT_CHANGED = 1,
	/// The device Source Format changed.
	/// (no additional callback params)
	VRM_DEVICE_CALLBACK_TYPE_SOURCE_FORMAT_CHANGED = 2,
	/// A device Property Value changed.
	/// params: a pointer to a VRmDWORD with the property id
	VRM_DEVICE_CALLBACK_TYPE_PROPERTY_VALUE_CHANGED = 3,
	/// The list of device properties changed.
	/// (no additional callback params)
	VRM_DEVICE_CALLBACK_TYPE_PROPERTY_LIST_CHANGED = 4,
	/// The list of device Source Formats changed.
	/// (no additional callback params)
	/// **THIS CALLBACK IS LEGACY**
	VRM_DEVICE_CALLBACK_TYPE_SOURCE_FORMAT_LIST_CHANGED = 5,
	/// The list of device Target Formats changed.
	/// (no additional callback params)
	VRM_DEVICE_CALLBACK_TYPE_TARGET_FORMAT_LIST_CHANGED = 6,
	/// Some device Property Info changed.
	/// params: a pointer to a VRmDWORD with the property id
	VRM_DEVICE_CALLBACK_TYPE_PROPERTY_INFO_CHANGED = 7,
	/// Some device Property Attribs changed.
	/// params: a pointer to a VRmDWORD with the property id
	VRM_DEVICE_CALLBACK_TYPE_PROPERTY_ATTRIBS_CHANGED = 8
} VRmDeviceCallbackType;


/// Callback function signature definition for VRmUsbCamRegisterDeviceCallbackEx()
typedef void (VRM_API *VRmDeviceCallback)(
	/// the device handle
	VRmUsbCamDevice f_device,
	/// the type of callback
	VRmDeviceCallbackType f_type,
	/// user data pointer as passed into VRmUsbCamRegisterDeviceCallbackEx()
	void* fp_user_data,
	/// optional additional callback parameters
	const void* fcp_callback_params);


/// register a callback function for the given device.
/// NOTE: in contrast to VRmUsbCamRegisterDeviceCallback(), this functions allows
/// registering a specific callback function pointer multiple times per device as
/// long as fp_user_data is different each time.
/// you should use VRmUsbCamUnregisterDeviceCallbackEx() for later unregistration
/// specifying the same function pointer and fp_user_data pair as used for
/// registration.
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamRegisterDeviceCallbackEx(VRmUsbCamDevice f_device, VRmDeviceCallback fp_callback, void* fp_user_data);


/// unregister a callback function for the given device.
/// specify the same function pointer and fp_user_data as used at registration.
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamUnregisterDeviceCallbackEx(VRmUsbCamDevice f_device, VRmDeviceCallback fp_callback, void* fp_user_data);


/// @}
// ------------------------------------------------------------------------
/// @defgroup VM_LIB                            VM_LIB related functions
// ------------------------------------------------------------------------
/// @{
VRM_EXTERN VRmRetVal VRM_API VRmCreateVMLIBKey(VRmDWORD* fp_vmlib_key);

VRM_EXTERN VRmRetVal VRM_API VRmCreateVMLIBKeyDsp(VRmDWORD* fp_vmlib_key);