loggerapp/datalogger/driver/vrmagic/vrmusbcam2l.h



// ------------------------------------------------------------------------
// Error Handling / General Management
// ------------------------------------------------------------------------

/// if an API function fails (return value VRM_FAILED) use this function
/// check if error was a transfer timeout
VRM_EXTERN VRmBOOL VRM_API VRmUsbCamLastErrorWasTransferTimeout(void);