loggerapp/datalogger/driver/vrmagic/vrmusbcamapi.py


# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 906
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetPropertyValueSizeI'):
    VRmUsbCamGetPropertyValueSizeI = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetPropertyValueSizeI
    VRmUsbCamGetPropertyValueSizeI.argtypes = [
        VRmUsbCamDevice, VRmPropId, POINTER(VRmSizeI)
    ]
    VRmUsbCamGetPropertyValueSizeI.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 907
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamSetPropertyValueSizeI'):
    VRmUsbCamSetPropertyValueSizeI = _libs[
        'libvrmusbcam2.so'].VRmUsbCamSetPropertyValueSizeI
    VRmUsbCamSetPropertyValueSizeI.argtypes = [
        VRmUsbCamDevice, VRmPropId, POINTER(VRmSizeI)
    ]
    VRmUsbCamSetPropertyValueSizeI.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 908
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetPropertyAttribsSizeI'):
    VRmUsbCamGetPropertyAttribsSizeI = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetPropertyAttribsSizeI
    VRmUsbCamGetPropertyAttribsSizeI.argtypes = [
        VRmUsbCamDevice, VRmPropId, POINTER(VRmPropAttribsSizeI)
    ]
    VRmUsbCamGetPropertyAttribsSizeI.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 913
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetPropertyValuePointI'):
    VRmUsbCamGetPropertyValuePointI = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetPropertyValuePointI
    VRmUsbCamGetPropertyValuePointI.argtypes = [
        VRmUsbCamDevice, VRmPropId, POINTER(VRmPointI)
    ]
    VRmUsbCamGetPropertyValuePointI.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 914
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamSetPropertyValuePointI'):
    VRmUsbCamSetPropertyValuePointI = _libs[
        'libvrmusbcam2.so'].VRmUsbCamSetPropertyValuePointI
    VRmUsbCamSetPropertyValuePointI.argtypes = [
        VRmUsbCamDevice, VRmPropId, POINTER(VRmPointI)
    ]
    VRmUsbCamSetPropertyValuePointI.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 915
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetPropertyAttribsPointI'):
    VRmUsbCamGetPropertyAttribsPointI = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetPropertyAttribsPointI
    VRmUsbCamGetPropertyAttribsPointI.argtypes = [
        VRmUsbCamDevice, VRmPropId, POINTER(VRmPropAttribsPointI)
    ]
    VRmUsbCamGetPropertyAttribsPointI.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 920
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetPropertyValueRectI'):
    VRmUsbCamGetPropertyValueRectI = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetPropertyValueRectI
    VRmUsbCamGetPropertyValueRectI.argtypes = [
        VRmUsbCamDevice, VRmPropId, POINTER(VRmRectI)
    ]
    VRmUsbCamGetPropertyValueRectI.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 921
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamSetPropertyValueRectI'):
    VRmUsbCamSetPropertyValueRectI = _libs[
        'libvrmusbcam2.so'].VRmUsbCamSetPropertyValueRectI
    VRmUsbCamSetPropertyValueRectI.argtypes = [
        VRmUsbCamDevice, VRmPropId, POINTER(VRmRectI)
    ]
    VRmUsbCamSetPropertyValueRectI.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 922
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetPropertyAttribsRectI'):
    VRmUsbCamGetPropertyAttribsRectI = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetPropertyAttribsRectI
    VRmUsbCamGetPropertyAttribsRectI.argtypes = [
        VRmUsbCamDevice, VRmPropId, POINTER(VRmPropAttribsRectI)
    ]
    VRmUsbCamGetPropertyAttribsRectI.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 931
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamSavePNG'):
    VRmUsbCamSavePNG = _libs['libvrmusbcam2.so'].VRmUsbCamSavePNG
    VRmUsbCamSavePNG.argtypes = [VRmSTRING, POINTER(VRmImage), c_int]
    VRmUsbCamSavePNG.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 933
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamLoadPNG'):
    VRmUsbCamLoadPNG = _libs['libvrmusbcam2.so'].VRmUsbCamLoadPNG
    VRmUsbCamLoadPNG.argtypes = [VRmSTRING, POINTER(POINTER(VRmImage))]
    VRmUsbCamLoadPNG.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 953
enum__VRmStaticCallbackType = c_int

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 953
VRM_STATIC_CALLBACK_TYPE_DEVICE_CHANGE = 1

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 953
VRM_STATIC_CALLBACK_TYPE_CMEM_ALLOCATION_CHANGE = 2

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 953
VRmStaticCallbackType = enum__VRmStaticCallbackType

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 963
enum__VRmDeviceChangeType = c_int

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 963
VRM_DEVICE_CHANGE_TYPE_ARRIVAL = 1

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 963
VRM_DEVICE_CHANGE_TYPE_REMOVECOMPLETE = 2

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 963
VRM_DEVICE_CHANGE_TYPE_BUSY = 3

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 963
VRmDeviceChangeType = enum__VRmDeviceChangeType

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 975


class struct__VRmStaticCallbackCMemAllocationChangeParams(Structure):
    pass


struct__VRmStaticCallbackCMemAllocationChangeParams.__slots__ = [
    'm_allocate',
    'mp_virtual',
    'mp_physical',
    'm_size',
]
struct__VRmStaticCallbackCMemAllocationChangeParams._fields_ = [
    ('m_allocate', VRmBOOL),
    ('mp_virtual', POINTER(None)),
    ('mp_physical', POINTER(None)),
    ('m_size', VRmDWORD),
]

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 975
VRmStaticCallbackCMemAllocationChangeParams = struct__VRmStaticCallbackCMemAllocationChangeParams

VRmStaticCallback = CFUNCTYPE(
    UNCHECKED(None), VRmStaticCallbackType, POINTER(None), POINTER(None)
)  # /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 978

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 988
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamRegisterStaticCallback'):
    VRmUsbCamRegisterStaticCallback = _libs[
        'libvrmusbcam2.so'].VRmUsbCamRegisterStaticCallback
    VRmUsbCamRegisterStaticCallback.argtypes = [
        VRmStaticCallback, POINTER(None)
    ]
    VRmUsbCamRegisterStaticCallback.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 991
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamUnregisterStaticCallback'):
    VRmUsbCamUnregisterStaticCallback = _libs[
        'libvrmusbcam2.so'].VRmUsbCamUnregisterStaticCallback
    VRmUsbCamUnregisterStaticCallback.argtypes = [VRmStaticCallback]
    VRmUsbCamUnregisterStaticCallback.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 1000
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamRegisterStaticCallbackEx'):
    VRmUsbCamRegisterStaticCallbackEx = _libs[
        'libvrmusbcam2.so'].VRmUsbCamRegisterStaticCallbackEx
    VRmUsbCamRegisterStaticCallbackEx.argtypes = [
        VRmStaticCallback, POINTER(None)
    ]
    VRmUsbCamRegisterStaticCallbackEx.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 1004
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamUnregisterStaticCallbackEx'):
    VRmUsbCamUnregisterStaticCallbackEx = _libs[
        'libvrmusbcam2.so'].VRmUsbCamUnregisterStaticCallbackEx
    VRmUsbCamUnregisterStaticCallbackEx.argtypes = [
        VRmStaticCallback, POINTER(None)
    ]
    VRmUsbCamUnregisterStaticCallbackEx.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 1036
enum__VRmDeviceCallbackType = c_int

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 1036
VRM_DEVICE_CALLBACK_TYPE_LUT_CHANGED = 1

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 1036
VRM_DEVICE_CALLBACK_TYPE_SOURCE_FORMAT_CHANGED = 2

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 1036
VRM_DEVICE_CALLBACK_TYPE_PROPERTY_VALUE_CHANGED = 3

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 1036
VRM_DEVICE_CALLBACK_TYPE_PROPERTY_LIST_CHANGED = 4

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 1036
VRM_DEVICE_CALLBACK_TYPE_SOURCE_FORMAT_LIST_CHANGED = 5

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 1036
VRM_DEVICE_CALLBACK_TYPE_TARGET_FORMAT_LIST_CHANGED = 6

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 1036
VRM_DEVICE_CALLBACK_TYPE_PROPERTY_INFO_CHANGED = 7

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 1036
VRM_DEVICE_CALLBACK_TYPE_PROPERTY_ATTRIBS_CHANGED = 8

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 1036
VRmDeviceCallbackType = enum__VRmDeviceCallbackType

VRmDeviceCallback = CFUNCTYPE(
    UNCHECKED(None), VRmUsbCamDevice, VRmDeviceCallbackType, POINTER(None),
    POINTER(None)
)  # /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 1039

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 1056
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamRegisterDeviceCallbackEx'):
    VRmUsbCamRegisterDeviceCallbackEx = _libs[
        'libvrmusbcam2.so'].VRmUsbCamRegisterDeviceCallbackEx
    VRmUsbCamRegisterDeviceCallbackEx.argtypes = [
        VRmUsbCamDevice, VRmDeviceCallback, POINTER(None)
    ]
    VRmUsbCamRegisterDeviceCallbackEx.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 1060
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamUnregisterDeviceCallbackEx'):
    VRmUsbCamUnregisterDeviceCallbackEx = _libs[
        'libvrmusbcam2.so'].VRmUsbCamUnregisterDeviceCallbackEx
    VRmUsbCamUnregisterDeviceCallbackEx.argtypes = [
        VRmUsbCamDevice, VRmDeviceCallback, POINTER(None)
    ]
    VRmUsbCamUnregisterDeviceCallbackEx.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 1067
if hasattr(_libs['libvrmusbcam2.so'], 'VRmCreateVMLIBKey'):
    VRmCreateVMLIBKey = _libs['libvrmusbcam2.so'].VRmCreateVMLIBKey
    VRmCreateVMLIBKey.argtypes = [POINTER(VRmDWORD)]
    VRmCreateVMLIBKey.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 1068
if hasattr(_libs['libvrmusbcam2.so'], 'VRmCreateVMLIBKeyDsp'):
    VRmCreateVMLIBKeyDsp = _libs['libvrmusbcam2.so'].VRmCreateVMLIBKeyDsp
    VRmCreateVMLIBKeyDsp.argtypes = [POINTER(VRmDWORD)]
    VRmCreateVMLIBKeyDsp.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 43
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamLastErrorWasTransferTimeout'):
    VRmUsbCamLastErrorWasTransferTimeout = _libs[
        'libvrmusbcam2.so'].VRmUsbCamLastErrorWasTransferTimeout
    VRmUsbCamLastErrorWasTransferTimeout.argtypes = []
    VRmUsbCamLastErrorWasTransferTimeout.restype = VRmBOOL
